--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ google-play-scraper==1.2.3
 requests==2.31.0
 python-dateutil==2.8.2
 google-generativeai==0.3.0
+apscheduler==3.10.4
+fastapi==0.104.1
+uvicorn==0.24.0
